Fixed issue with tag preco-h2 text-align

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -165,7 +165,7 @@ nav ul li a{
 .price h2{
     font-size: 40px;
     color: #fff;
-    text-align: 
+    text-align: center
 }
 
 .detail h4{
